blog and slug path + draft mode

--- a/src/data/blog/getting-started-with-astro.mdx
+++ b/src/data/blog/getting-started-with-astro.mdx
@@ -1,7 +1,9 @@
 ---
 title: "Getting Started with Astro"
 description: "A walkthrough of setting up an Astro project from scratch, including content collections and MDX support."
+slug: getting-started-with-astro
 pubDate: 2025-02-06
+draft: true
 ---
 
 Astro has quickly become one of my favourite frameworks for building content-driven websites. In this post, I'll walk through how I set up this very site.
