--- a/src/data/blog/audioslim.mdx
+++ b/src/data/blog/audioslim.mdx
@@ -15,6 +15,8 @@ A(I) built Audioslim, a native macOS app that converts audio between MP3, WAV, A
 
 ![screenshot](/audioslim.webp)
 
+{/* more */}
+
 ## The Stack
 
 Audioslim uses:
