--- a/src/data/blog/audioslim.mdx
+++ b/src/data/blog/audioslim.mdx
@@ -5,11 +5,11 @@ slug: audioslim
 pubDate: 2025-02-08
 ---
 
-I've been meaning to build this app and I actually started around this time last year. But after learning how to "code" or build with AI coding agents like `claude` code, I just gave it this prompt:
+I've been meaning to build this app, and I actually started around this time last year. But after learning how to "code" or build with AI coding agents like `claude` code, I just gave it this prompt:
 
 > plan how to complete this app. it should allow one or multiple files to be selected or dragged (audio only) and then it should show a box to select which format to convert to e.g mp3, wav, aac,ogg, flac,m4a, mp4) plus certain options that come from ffmpeg to compress the file
 
-It wrote this comprehensive [plan](https://gist.github.com/gianpaj/f722903768ebf39652e10e8e259d57bb). And the it went for it. I did a small question to fix a small UI color issue. And voila!
+It wrote this comprehensive [plan](https://gist.github.com/gianpaj/f722903768ebf39652e10e8e259d57bb). And the it went for it. I asked a small question to fix a small UI color issue. And voila!
 
 A(I) built Audioslim, a native macOS app that converts audio between MP3, WAV, AAC, OGG, FLAC, M4A, and MP4. I built it with [claude code](https://claude.com/product/claude-code), Anthropic's AI coding assistant for the terminal.
 
