--- a/src/data/blog/opus-4-6-vs-codex-5-3.mdx
+++ b/src/data/blog/opus-4-6-vs-codex-5-3.mdx
@@ -10,7 +10,7 @@ import More from "../../components/More.astro";
 
 A comparison of benchmark metrics between Opus 4.6 and Codex 5.3 models.
 
-Anthropic and OpenAI both published Terminal-Bench 2.0 results recently — but in separate charts and, in table. I wanted the full picture, so I combined them.
+Anthropic and OpenAI both recently published Terminal-Bench 2.0 results, but in separate charts and a table. I wanted the full picture, so I combined them.
 
 <TerminalBenchChart client:load />
 
