feat: add blog post tags

--- a/src/data/blog/audioslim.mdx
+++ b/src/data/blog/audioslim.mdx
@@ -3,6 +3,12 @@ title: "I Built a Desktop Audio Converter With Claude Code"
 description: "A free and open-source macOS app to convert audio files to different formats."
 slug: audioslim
 pubDate: 2025-02-08
+tags:
+  - coding
+  - projects
+  - audio
+  - tools
+  - macos
 ---
 
 I've been meaning to build this app, and I actually started around this time last year. But after learning how to "code" or build with AI coding agents like `claude` code, I just gave it this prompt:
