--- a/src/data/blog/github-actions-terminal-monitoring.mdx
+++ b/src/data/blog/github-actions-terminal-monitoring.mdx
@@ -4,6 +4,12 @@ description: "How to check builds and fix code review comments without opening a
 slug: github-gh-command-claude-code
 pubDate: 2026-02-14
 draft: true
+tags:
+  - ai
+  - coding_agent
+  - terminal
+  - github
+  - workflow
 ---
 
 When you're deep in the terminal or your IDE, switching to a browser just to check if a build passed is a context-switching killer.
