--- a/src/data/blog/opus-4-6-vs-codex-5-3.mdx
+++ b/src/data/blog/opus-4-6-vs-codex-5-3.mdx
@@ -3,6 +3,10 @@ title: "Opus 4.6 vs ChatGPT Codex 5.3"
 description: "A comparison of benchmark performance metrics between Opus 4.6 and Codex 5.3 models"
 slug: opus-4-6-vs-codex-5-3
 pubDate: 2026-02-06
+tags:
+  - llm
+  - benchmark
+  - comparison
 ---
 
 import TerminalBenchChart from "../../components/TerminalBenchChart.tsx";
